--- a/ProiectFinal27march/CSS/principal.css
+++ b/ProiectFinal27march/CSS/principal.css
@@ -135,6 +135,51 @@ tr:hover:nth-child(2n+1){
 
 tr:hover{
   background-color: #ffea00;
-  
-
 }
+
+@media only screen and (max-width: 450px) {
+  
+  .nav-bar{
+   position: fixed;
+   width: 100%;
+   height: 7%;
+   display: block;
+   font-size: 1px;
+   text-align: left;
+  }
+  #logo{
+    display: none;
+  }
+  nav a{
+    top: 0;
+    left: 0;
+    font-size: 2vh;
+  }
+  .dropdown  {
+    text-align: center;
+    display: block;
+    font-size: 1.3vh;
+} 
+  .dropbtn{
+    display: none;
+    top:0;
+    right: 0;
+  }
+  .flexbox{
+    display: block;
+  }
+  .divimagine{
+    width: 50%; 
+    margin-left: 25%;
+  }
+  .hid{
+    display: none;
+  }
+  .hid2{
+    text-align: center;
+  }
+  p{
+    text-align: center;
+  }
+}
+  
