--- a/ProiectFinal27march/CSS/pagina2.css
+++ b/ProiectFinal27march/CSS/pagina2.css
@@ -129,3 +129,38 @@ h1 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
+
+@media only screen and (max-width: 450px) {
+  
+  .nav-bar{
+   position: fixed;
+   width: 100%;
+   height: 7%;
+   display: block;
+   font-size: 1px;
+   text-align: left;
+  }
+  #logo{
+    display: none;
+  }
+  nav a{
+    top: 0;
+    left: 0;
+    font-size: 2vh;
+  }
+  .dropdown  {
+    text-align: center;
+    display: block;
+    font-size: 1.3vh;
+} 
+  .dropbtn{
+    display: none;
+    top:0;
+    right: 0;
+  }
+  
+  .gridbox{
+    display: block;
+  }
+}
+
