--- a/ProiectFinal27march/CSS/pagina4.css
+++ b/ProiectFinal27march/CSS/pagina4.css
@@ -96,7 +96,6 @@ body {
   width: 420px;
   height: 630px;
   border: 1px solid black;
-  border-radius: 10px;
 }
 
 ol {
@@ -110,7 +109,6 @@ ol li::before{
 ol li::after{
     content: ".";
 }
-
 
 .img1 {
   margin-top: 5%;
@@ -208,74 +206,130 @@ ol li::after{
     100% { transform: rotate(-1deg); }
 }
 
-@media only screen and (max-width: 600px) {
-  .nav-bar {
-    display: flex;
-    background-color: #ffba08;
-    position: sticky;
-    top: 0;
-    font-family: "Staatliches", cursive;
-    font-weight: 500;
-    border: 1px solid black;
+@media only screen and (max-width: 450px) {
+  
+  .nav-bar{
+   position: fixed;
+   width: 100%;
+   height: 7%;
+   display: block;
+   font-size: 1px;
+   text-align: left;
   }
-  nav a {
-    color: black;
-    font-size: 0.7em;
-  }
-  nav a:hover {
-    color: rgb(180, 175, 175);
-  }
-
-  .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-
-  .dropdown .dropbtn {
-    color: black;
-    font-size: 18px;
-    border: none;
-    outline: none;
-    padding: 16px 16px;
-    background-color: inherit;
-    font-family: "Staatliches", cursive;
-  }
-
-  .dropdown-content {
-    background-color: #ffff3f;
+  #logo{
     display: none;
-    position: absolute;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
   }
-
-  .dropdown-content a {
-    float: none;
-    color: black;
-    font-weight: 600;
-    padding: 12px 16px;
-    text-decoration: none;
+  nav a{
+    top: 0;
+    left: 0;
+    font-size: 2vh;
+  }
+  .dropdown  {
+    text-align: center;
     display: block;
-    text-align: left;
+    font-size: 1.3vh;
+} 
+  .dropbtn{
+    display: none;
+    top:0;
+    right: 0;
   }
-
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-
-  .dropdown:hover .dropdown-content {
+  .flexbox{
     display: block;
   }
-
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: "Montserrat", sans-serif;
-    background-image: url(../Fotografii/Xsafari20.jpg);
-    background-repeat: no-repeat;
+  .divimagine{
+    width: 50%; 
+    margin-left: 25%;
   }
+  .hid{
+    display: none;
+  }
+  .hid2{
+    text-align: center;
+  }
+  p{
+    text-align: center;
+  }
+  .gbox{
+    display:block;
+  }
+  .item1{
+    margin-top:2%;
+    margin-bottom: 2%;
+    width: 90%;
+    height: auto;
+    margin-left: 6%;
+    border-radius: 10px;
+  }
+  .item2{
+    margin-top:2%;
+    margin-bottom: 2%;
+    width: 90%;
+    height: auto;
+    margin-left: 6%;
+    border-radius: 10px;
+  }
+  .item3{
+    margin-top:2%;
+    margin-bottom: 2%;
+    width: 90%;
+    height: auto;
+    margin-left: 6%;
+    border-radius: 10px;
+  }
+  .item4{
+    margin-top:2%;
+    margin-bottom: 2%;
+    width: 90%;
+    height: auto;
+    margin-left: 6%;
+    border-radius: 10px;
+  }
+  .item5{
+    margin-top:2%;
+    margin-bottom: 2%;
+    width: 90%;
+    height: auto;
+    margin-left: 6%;
+    border-radius: 10px;
+  }
+  .item6{
+    margin-top:2%;
+    margin-bottom: 2%;
+    width: 90%;
+    height: auto;
+    margin-left: 6%;
+    border-radius: 10px;
+  }
+  .item7{
+    margin-top:2%;
+    margin-bottom: 2%;
+    width: 90%;
+    height: auto;
+    margin-left: 6%;
+    border-radius: 10px;
+  }
+  .item8{
+    margin-top:2%;
+    margin-bottom: 2%;
+    width: 90%;
+    height: auto;
+    margin-left: 6%;
+    border-radius: 10px;
+  }
+  .item9{
+    margin-top:2%;
+    margin-bottom: 2%;
+    width: 90%;
+    height: auto;
+    margin-left: 6%;
+    border-radius: 10px;
+  }
+  .px{
+    margin-top: 20%;
+  }
+}
 
-  .logo {
-    width: 1em;
-    height: 3.5em; } }
+@media only screen and (min-width:451px) and (max-width:900px){
+  
+}
