--- a/ProiectFinal27march/CSS/pagina4.css
+++ b/ProiectFinal27march/CSS/pagina4.css
@@ -38,7 +38,7 @@ nav a:hover {
 }
 
 .dropdown-content {
-  background-color: #FCC753;
+  background-color: #fcc753;
   display: none;
   position: absolute;
   min-width: 160px;
@@ -102,12 +102,12 @@ ol {
   padding-right: 2%;
 }
 
-ol li::before{
-    content: "→";
+ol li::before {
+  content: "→";
 }
 
-ol li::after{
-    content: ".";
+ol li::after {
+  content: ".";
 }
 
 .img1 {
@@ -193,143 +193,220 @@ ol li::after{
   animation-duration: 2s;
 }
 @keyframes animatie {
-    0% { transform: rotate(0deg); }
-    10% { transform: rotate(-1deg); }
-    20% { transform: rotate(1deg); }
-    30% { transform: rotate(0deg); }
-    40% { transform: rotate(1deg); }
-    50% { transform: rotate(-1deg); }
-    60% { transform: rotate(0deg); }
-    70% { transform: rotate(-1deg); }
-    80% { transform: rotate(1deg); }
-    90% { transform: rotate(0deg); }
-    100% { transform: rotate(-1deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(-1deg);
+  }
+  20% {
+    transform: rotate(1deg);
+  }
+  30% {
+    transform: rotate(0deg);
+  }
+  40% {
+    transform: rotate(1deg);
+  }
+  50% {
+    transform: rotate(-1deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  }
+  70% {
+    transform: rotate(-1deg);
+  }
+  80% {
+    transform: rotate(1deg);
+  }
+  90% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-1deg);
+  }
 }
 
 @media only screen and (max-width: 450px) {
-  
-  .nav-bar{
-   position: fixed;
-   width: 100%;
-   height: 7%;
-   display: block;
-   font-size: 1px;
-   text-align: left;
+  .nav-bar {
+    position: fixed;
+    width: 100%;
+    height: 7%;
+    display: block;
+    font-size: 1px;
+    text-align: left;
   }
-  #logo{
+  #logo {
     display: none;
   }
-  nav a{
+  nav a {
     top: 0;
     left: 0;
     font-size: 2vh;
   }
-  .dropdown  {
+  .dropdown {
     text-align: center;
     display: block;
     font-size: 1.3vh;
-} 
-  .dropbtn{
+  }
+  .dropbtn {
     display: none;
-    top:0;
+    top: 0;
     right: 0;
   }
-  .flexbox{
+  .flexbox {
     display: block;
   }
-  .divimagine{
-    width: 50%; 
+  .divimagine {
+    width: 50%;
     margin-left: 25%;
   }
-  .hid{
+  .hid {
     display: none;
   }
-  .hid2{
+  .hid2 {
     text-align: center;
   }
-  p{
+  p {
     text-align: center;
   }
-  .gbox{
-    display:block;
+  .gbox {
+    display: block;
   }
-  .item1{
-    margin-top:2%;
+  .item1 {
+    margin-top: 2%;
     margin-bottom: 2%;
     width: 90%;
     height: auto;
     margin-left: 6%;
     border-radius: 10px;
   }
-  .item2{
-    margin-top:2%;
+  .item2 {
+    margin-top: 2%;
     margin-bottom: 2%;
     width: 90%;
     height: auto;
     margin-left: 6%;
     border-radius: 10px;
   }
-  .item3{
-    margin-top:2%;
+  .item3 {
+    margin-top: 2%;
     margin-bottom: 2%;
     width: 90%;
     height: auto;
     margin-left: 6%;
     border-radius: 10px;
   }
-  .item4{
-    margin-top:2%;
+  .item4 {
+    margin-top: 2%;
     margin-bottom: 2%;
     width: 90%;
     height: auto;
     margin-left: 6%;
     border-radius: 10px;
   }
-  .item5{
-    margin-top:2%;
+  .item5 {
+    margin-top: 2%;
     margin-bottom: 2%;
     width: 90%;
     height: auto;
     margin-left: 6%;
     border-radius: 10px;
   }
-  .item6{
-    margin-top:2%;
+  .item6 {
+    margin-top: 2%;
     margin-bottom: 2%;
     width: 90%;
     height: auto;
     margin-left: 6%;
     border-radius: 10px;
   }
-  .item7{
-    margin-top:2%;
+  .item7 {
+    margin-top: 2%;
     margin-bottom: 2%;
     width: 90%;
     height: auto;
     margin-left: 6%;
     border-radius: 10px;
   }
-  .item8{
-    margin-top:2%;
+  .item8 {
+    margin-top: 2%;
     margin-bottom: 2%;
     width: 90%;
     height: auto;
     margin-left: 6%;
     border-radius: 10px;
   }
-  .item9{
-    margin-top:2%;
+  .item9 {
+    margin-top: 2%;
     margin-bottom: 2%;
     width: 90%;
     height: auto;
     margin-left: 6%;
     border-radius: 10px;
   }
-  .px{
+  .px {
     margin-top: 20%;
   }
 }
 
-@media only screen and (min-width:451px) and (max-width:900px){
-  
+@media only screen and (min-width: 451px) and (max-width: 900px) {
+  .gbox {
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 25% 25% 25% 25%;
+  }
+  .item7 {
+    display: none;
+  }
+
+  .item1{
+    width: 275px;
+    height: 800px;
+    grid-column: 1/2;
+    grid-row: 1/2; ;
+  }
+
+  .item2{
+    width: 275px;
+    height: 800px;
+    grid-column: 2/3;
+    grid-row: 1/2; ;
+  }
+  .item3{
+    width: 275px;
+    height: 800px;
+    grid-column: 1/2;
+    grid-row: 2/3; ;
+  }
+  .item4{
+    width: 275px;
+    height: 800px;
+    grid-column: 2/3;
+    grid-row: 2/3; ;
+  }
+  .item5{
+    width: 275px;
+    height: 900px;
+    grid-column: 1/2;
+    grid-row: 3/4; ;
+  }
+  .item6{
+    width: 275px;
+    height: 900px;
+    grid-column: 2/3;
+    grid-row: 3/4; ;
+  }
+  .item8{
+    width: 275px;
+    height: 900px;
+    grid-column: 1/2;
+    grid-row: 4/5; ;
+  }
+  .item9{
+    width: 275px;
+    height: 900px;
+    grid-column: 2/3;
+    grid-row: 4/5; ;
+  }
 }
