Last Update - 3/27/2022 15:47PM

--- a/ProiectFinal27march/CSS/pagina2.css
+++ b/ProiectFinal27march/CSS/pagina2.css
@@ -162,5 +162,14 @@ h1 {
   .gridbox{
     display: block;
   }
+  .headrr{
+    margin-top: 20%;
+  }
 }
+@media only screen and (min-width: 451px) and (max-width: 1000px) {
 
+  .gridbox {
+    display: grid;
+    grid-template-columns: 50% 50%;
+
+} }
