--- a/ProiectFinal27march/CSS/pagina4.css
+++ b/ProiectFinal27march/CSS/pagina4.css
@@ -182,13 +182,7 @@ ol li::after {
   height: 630px;
   border: 1px solid black;
 }
-
-.images {
-  width: 100%;
-  height: 50%;
-}
-
-#img1:hover {
+.img1:hover {
   animation-name: animatie;
   animation-duration: 2s;
 }
